=== JavaScriptCore-416.9 ===

2005-09-22  Timothy Hatcher  <timothy@apple.com>

	    Merges fixes from TOT to Safari-Den-branch

    2005-09-20  Geoffrey Garen  <ggaren@apple.com>

        - More changes needed to fix <rdar://problem/4214783> 8F29 REGRESSION(Denver/Chardonnay):
          kjs_fast_malloc crash due to lack of locking on multiple threads (seen selecting volumes in
          the installer)
          
        Added InterpreterLocks in some places in the bindings we missed before.
        
        Reviewed by john.

        * bindings/runtime_root.cpp:
        (KJS::Bindings::addNativeReference):
        (KJS::Bindings::removeNativeReference):
        (RootObject::removeAllNativeReferences):
        * bindings/runtime_root.h:
        (KJS::Bindings::RootObject::~RootObject):
        (KJS::Bindings::RootObject::setRootObjectImp):

2005-09-21  Timothy Hatcher  <timothy@apple.com>

          - Fixed <rdar://problem/4263434> <rdar://problem/4263434> Denver 8F29 Regression:
            KJS::InterpreterImp::mark() crash

          Fix by mjs, review by Geoff.

          * kjs/internal.cpp:
          (KJS::InterpreterImp::mark): Added a null check on globExec in case a
          garbage collection occurs inside InterpreterImp::globalInit (called
          from InterpreterImp::InterpreterImp), at which point globExec has not yet been initialized.

=== Safari-416.8 ===

2005-09-14  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Geoff.

	- fixed <rdar://problem/4214783> REGRESSION: kjs_fast_malloc crash due to lack of locking on multiple threads (seen selecting volumes in the installer)

	Make sure to lock using the InterpreterLock class in all places that need it
	(including anything that uses the collector, the parser, the protect count hash table,
	and anything that allocates via fast_malloc).

	Also added assertions to ensure that the locking rules are followed for the relevant
	resources.

        * Makefile.am:
        * bindings/NP_jsobject.cpp: